--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "sass": "npx sass --watch assets/sass/main.scss:public/css/style.css",
+    "sass:watch": "npx sass --watch sass/main.scss:public/css/style.css",
+    "sass": "npx sass sass/main.scss public/css/style.css",
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
@@ -21,6 +22,11 @@
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.1",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "path": "^0.12.7"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.9",
+    "sass": "^1.83.0"
   }
 }
