--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^16.4.7",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
+    "express-ejs-layouts": "^2.5.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.1",
     "multer": "^1.4.5-lts.1",
